tests/istio/gcp/test_data/expected/apiextensions.k8s.io_v1beta1_customresourcedefinition_solarwindses.config.istio.io.yaml
apiVersion: apiextensions.k8s.io/v1beta1
kind: CustomResourceDefinition
metadata:
  annotations:
    helm.sh/resource-policy: keep
  labels:
    app: mixer
    chart: istio
    heritage: Tiller
    istio: mixer-adapter
    package: solarwinds
    release: istio
  name: solarwindses.config.istio.io
spec:
  group: config.istio.io
  names:
    categories:
    - istio-io
    - policy-istio-io
    kind: solarwinds
    plural: solarwindses
    singular: solarwinds
  scope: Namespaced
  version: v1alpha2
