tests/istio/gcp/test_data/expected/config.istio.io_v1alpha2_rule_kubeattrgenrulerule.yaml
apiVersion: config.istio.io/v1alpha2
kind: rule
metadata:
  labels:
    app: mixer
    chart: mixer
    heritage: Tiller
    release: istio
  name: kubeattrgenrulerule
  namespace: istio-system
spec:
  actions:
  - handler: kubernetesenv
    instances:
    - attributes.kubernetes
