tests/istio/gcp/test_data/expected/config.istio.io_v1alpha2_rule_promtcp.yaml
apiVersion: config.istio.io/v1alpha2
kind: rule
metadata:
  labels:
    app: mixer
    chart: mixer
    heritage: Tiller
    release: istio
  name: promtcp
  namespace: istio-system
spec:
  actions:
  - handler: prometheus
    instances:
    - tcpbytesent.metric
    - tcpbytereceived.metric
  match: context.protocol == "tcp"
