tests/istio/gcp/test_data/expected/config.istio.io_v1alpha2_rule_promtcpconnectionclosed.yaml
apiVersion: config.istio.io/v1alpha2
kind: rule
metadata:
  labels:
    app: mixer
    chart: mixer
    heritage: Tiller
    release: istio
  name: promtcpconnectionclosed
  namespace: istio-system
spec:
  actions:
  - handler: prometheus
    instances:
    - tcpconnectionsclosed.metric
  match: context.protocol == "tcp" && ((connection.event | "na") == "close")
