tests/istio/gcp/test_data/expected/rbac.authorization.k8s.io_v1_role_istio-ingressgateway-sds.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: Role
metadata:
  name: istio-ingressgateway-sds
  namespace: istio-system
rules:
- apiGroups:
  - ""
  resources:
  - secrets
  verbs:
  - get
  - watch
  - list
