tests/istio/gcp/test_data/expected/~g_v1_configmap_istio-parameters-cm9hckfgmb.yaml
apiVersion: v1
data:
  clusterRbacConfig: ON_WITH_EXCLUSION
  gatewaySelector: ingressgateway
kind: ConfigMap
metadata:
  name: istio-parameters-cm9hckfgmb
  namespace: istio-system
