tests/istio/gcp/test_data/expected/~g_v1_namespace_istio-system.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    istio-injection: disabled
  name: istio-system
