tests/istio/gcp/test_data/expected/~g_v1_service_istio-galley.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: galley
    chart: galley
    heritage: Tiller
    istio: galley
    release: istio
  name: istio-galley
  namespace: istio-system
spec:
  ports:
  - name: https-validation
    port: 443
  - name: http-monitoring
    port: 15014
  - name: grpc-mcp
    port: 9901
  selector:
    istio: galley
