tests/istio/gcp/test_data/expected/~g_v1_service_istio-pilot.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: pilot
    chart: pilot
    heritage: Tiller
    istio: pilot
    release: istio
  name: istio-pilot
  namespace: istio-system
spec:
  ports:
  - name: grpc-xds
    port: 15010
  - name: https-xds
    port: 15011
  - name: http-legacy-discovery
    port: 8080
  - name: http-monitoring
    port: 15014
  selector:
    istio: pilot
