tests/istio/gcp/test_data/expected/~g_v1_service_istio-sidecar-injector.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: sidecarInjectorWebhook
    chart: sidecarInjectorWebhook
    heritage: Tiller
    istio: sidecar-injector
    release: istio
  name: istio-sidecar-injector
  namespace: istio-system
spec:
  ports:
  - port: 443
  selector:
    istio: sidecar-injector
