tests/istio/gcp/test_data/expected/~g_v1_serviceaccount_istio-citadel-service-account.yaml
apiVersion: v1
kind: ServiceAccount
metadata:
  labels:
    app: security
    chart: security
    heritage: Tiller
    release: istio
  name: istio-citadel-service-account
  namespace: istio-system
