tests/istio/gcp/test_data/expected/~g_v1_serviceaccount_istio-cleanup-secrets-service-account.yaml
apiVersion: v1
kind: ServiceAccount
metadata:
  annotations:
    helm.sh/hook: post-delete
    helm.sh/hook-delete-policy: hook-succeeded
    helm.sh/hook-weight: "1"
  labels:
    app: security
    chart: security
    heritage: Tiller
    release: istio
  name: istio-cleanup-secrets-service-account
  namespace: istio-system
