tests/istio/gcp/test_data/expected/~g_v1_serviceaccount_istio-mixer-service-account.yaml
apiVersion: v1
kind: ServiceAccount
metadata:
  labels:
    app: mixer
    chart: mixer
    heritage: Tiller
    release: istio
  name: istio-mixer-service-account
  namespace: istio-system
