tests/istio/gcp/test_data/expected/~g_v1_serviceaccount_istio-multi.yaml
apiVersion: v1
kind: ServiceAccount
metadata:
  name: istio-multi
  namespace: istio-system
