tests/istio/gcp/test_data/expected/~g_v1_serviceaccount_istio-security-post-install-account.yaml
apiVersion: v1
kind: ServiceAccount
metadata:
  labels:
    app: security
    chart: security
    heritage: Tiller
    release: istio
  name: istio-security-post-install-account
  namespace: istio-system
