tests/istio/gcp/test_data/expected/~g_v1_serviceaccount_kiali-service-account.yaml
apiVersion: v1
kind: ServiceAccount
metadata:
  labels:
    app: kiali
    chart: kiali
    heritage: Tiller
    release: istio
  name: kiali-service-account
  namespace: istio-system
